# sonolus-core-py

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/: __init__.py
src/sonolus_core/: __init__.py  exceptions.py  resource.py  version.py
src/sonolus_core/common/: __init__.py  localization.py  version.py
src/sonolus_core/common/typings/: __init__.py  background.py
src/sonolus_core/database/: __init__.py  background.py  database.py  effect.py  engine.py  general.py  info_details.py  info_list.py  level.py  localization.py  particle.py  skin.py
src/sonolus_core/typings/: __init__.py  background.py  background_data.py  effect.py  effect_data.py  engine.py  engine_configuration.py  engine_data.py  general.py  item_details.py  item_list.py  level.py  level_data.py  particle.py  particle_data.py  server_info.py  skin.py  skin_data.py
tests/unit/: test_localization.py  test_resource.py  test_typings.py  test_version.py
