[tool.poetry]
name = "sonolus-core-py"
version = "0.1.0"
description = "Typings and util functions for sonolus"
authors = ["Dosugamea <17107514+Dosugamea@users.noreply.github.com>"]
license = "AGPLv3+"
homepage = "https://github.com/PurplePalette/sonolus-core-py"
repository = "https://github.com/PurplePalette/sonolus-core-py"
keywords = ["sonolus"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Games/Entertainment :: Arcade",
    "Topic :: Utilities"
]
packages = [
    { include = "sonolus_core", from = "src" }
]
include = [
    "LICENSE",
    "README.md"
]

[tool.poetry.dependencies]
python = "^3.8"
dataclasses-json = "^0.5.6"
single-source = "^0.2.0"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pysen = {version = "0.9.1", extras = ["lint"]}
pytest-sugar = "^0.9.4"
pysen-ls = "^0.1.2"

[tool.pysen]
version = "0.9"

[tool.pysen.lint]
enable_black = true
enable_flake8 = true
enable_isort = true
enable_mypy = true
mypy_preset = "strict"
line_length = 88
py_version = "py38"
[[tool.pysen.lint.mypy_targets]]
  paths = ["."]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
